fix: hardcode Vercel URL in CORS defaults + switch to allowedOriginPatterns